--- a/src/app/components/MapFilter/MapFilter.module.css
+++ b/src/app/components/MapFilter/MapFilter.module.css
@@ -2,60 +2,13 @@
   display: grid;
   align-content: start;
   position: relative;
-  width: 64px;
-}
-
-.filter {
-  display: flex;
-  padding: 0.5em;
-  height: 64px;
-  width: 64px;
-  position: relative;
-  transition: background-color 0.1s ease-in;
-}
-
-.filter:hover {
-  background-color: var(--color-shade-two);
-}
-
-.filter input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-  height: 0;
-  width: 0;
-}
-
-.filter img {
-  width: 100%;
-  height: 100%;
-  filter: grayscale() brightness(0.5);
-}
-
-.filter input:checked + img {
-  filter: none;
-}
-
-.filter input:focus-visible + img {
-  outline: thin solid;
-}
-
-.add {
-  align-self: end;
-  height: 64px;
-  width: 64px;
-  padding: 1em;
-}
-
-.add:hover {
-  background-color: var(--color-primary);
-  color: var(--color-text);
+  width: 250px;
 }
 
 .nav {
   position: absolute;
-  left: 64px;
-  top: calc(50% - 48px);
+  left: 100%;
+  top: calc(50% - 80px);
   z-index: 9000;
   background: var(--color-shade-one);
 }
@@ -76,5 +29,5 @@
 .nav svg {
   width: 16px;
   height: 16px;
-  fill: var(--color-text);
+  color: var(--color-text);
 }
