--- a/src/app/components/MapFilter/MapFilter.module.css
+++ b/src/app/components/MapFilter/MapFilter.module.css
@@ -2,6 +2,18 @@
   display: grid;
   align-content: start;
   position: relative;
+  width: 0;
+  transition: width 0.3s ease-in-out;
+}
+
+.content {
+  position: absolute;
+  left: 0;
+  width: 250px;
+}
+
+.open {
+  transform: none;
   width: 250px;
 }
 
