--- a/src/app/components/MarkerDetails/MarkerDetails.module.css
+++ b/src/app/components/MarkerDetails/MarkerDetails.module.css
@@ -13,6 +13,7 @@
   display: grid;
   grid-template-columns: 128px 1fr;
   border-bottom: 1px solid var(--color-shade-two);
+  padding-bottom: 0.5em;
 }
 
 .header h2 {
