✨ Use Overwolf user for markers and comments

--- a/src/app/components/MarkerDetails/MarkerDetails.module.css
+++ b/src/app/components/MarkerDetails/MarkerDetails.module.css
@@ -11,7 +11,8 @@
 
 .header {
   display: grid;
-  grid-template-columns: 128px 1fr;
+  grid-template-columns: auto 1fr;
+  column-gap: 1em;
   border-bottom: 1px solid var(--color-shade-two);
   padding-bottom: 0.5em;
 }
