--- a/src/app/components/AddComment/AddComment.module.css
+++ b/src/app/components/AddComment/AddComment.module.css
@@ -19,8 +19,14 @@
   background: var(--color-primary);
 }
 
+.form input[type='submit']:disabled {
+  cursor: default;
+  color: var(--color-trivial);
+  background: var(--color-three);
+}
+
 .form small {
   text-align: center;
-  margin-bottom: 0.5em;
+  margin-bottom: 0.3em;
   color: var(--color-trivial);
 }
