--- a/src/app/components/Modal/Modal.module.css
+++ b/src/app/components/Modal/Modal.module.css
@@ -1,4 +1,4 @@
-.container {
+.backdrop {
   position: fixed;
   inset: 0;
   background: rgba(0, 0, 0, 0.5);
@@ -11,4 +11,28 @@
   margin: 10% 20%;
   border: 1px solid var(--color-shade-two);
   background-color: var(--color-shade-one);
+  padding: 1em;
+}
+
+.header {
+  position: relative;
+  text-align: center;
+  margin-bottom: 1em;
+}
+
+.close {
+  display: grid;
+  position: absolute;
+  right: 0;
+  top: 0;
+  background: none;
+  padding: 0;
+  color: var(--color-text);
+  height: 0.7em;
+  width: 0.7em;
+}
+
+.close svg {
+  height: 100%;
+  width: 100%;
 }
