--- a/src/app/components/Modal/Modal.module.css
+++ b/src/app/components/Modal/Modal.module.css
@@ -8,10 +8,14 @@
 .content {
   position: absolute;
   inset: 0;
-  margin: 10% 20%;
+  margin: auto;
   border: 1px solid var(--color-shade-two);
   background-color: var(--color-shade-one);
   padding: 1em;
+  width: 800px;
+  height: 560px;
+  display: grid;
+  grid-template-rows: auto 1fr;
 }
 
 .header {
