--- a/src/app/components/MarkerDetails/MarkerDetails.module.css
+++ b/src/app/components/MarkerDetails/MarkerDetails.module.css
@@ -5,10 +5,6 @@
   gap: 0.5em;
 }
 
-.headline {
-  text-align: center;
-}
-
 .header {
   display: grid;
   grid-template-columns: auto 1fr;
@@ -33,4 +29,9 @@
 
 .empty {
   margin: auto;
+}
+
+.aside {
+  display: flex;
+  justify-content: space-between;
 }
