--- a/src/app/App.module.css
+++ b/src/app/App.module.css
@@ -17,5 +17,5 @@
   padding: 1em;
   display: grid;
   gap: 1em;
-  grid-template-rows: auto 1fr auto;
+  grid-template-rows: auto auto 1fr auto;
 }
