--- a/src/app/components/AddResources/StepIcon.module.css
+++ b/src/app/components/AddResources/StepIcon.module.css
@@ -1,6 +1,7 @@
 .step {
   display: inline-block;
-  background: var(--color-primary);
+  background: var(--color-shade-two);
+  color: var(--color-primary);
   border-radius: 50%;
   width: 1.4em;
   height: 1.4em;
@@ -9,4 +10,5 @@
 
 .disabled {
   background: var(--color-shade-two);
+  color: var(--color-text);
 }
