--- a/src/app/components/MapFilter/Checkbox.module.css
+++ b/src/app/components/MapFilter/Checkbox.module.css
@@ -4,8 +4,9 @@
   grid-gap: 0.25em;
   position: relative;
   transition: background-color 0.1s ease-in;
-  padding: 0.25em 1em;
+  padding: 0.25em 0.5em;
   filter: grayscale() brightness(0.5);
+  cursor: pointer;
 }
 
 .checked {
@@ -13,7 +14,7 @@
 }
 
 .filter:hover {
-  background-color: var(--color-shade-two);
+  color: var(--color-primary);
 }
 
 .filter input {
