--- a/src/app/App.module.css
+++ b/src/app/App.module.css
@@ -4,18 +4,11 @@
   background: var(--color-shade-one);
   color: #fff;
   display: grid;
-  grid-template-columns: auto 1fr auto;
-  grid-template-rows: 26px calc(100vh - 26px);
+  grid-template-columns: auto 1fr;
+  grid-template-rows: auto 1fr;
+  position: relative;
 }
 
 .container > header {
   grid-column: 1 / 4;
-}
-
-.more {
-  background-color: var(--color-shade-three);
-  padding: 1em;
-  display: grid;
-  gap: 1em;
-  grid-template-rows: auto auto 1fr auto;
 }
