--- a/src/app/components/MapFilter/MarkerSection.module.css
+++ b/src/app/components/MapFilter/MarkerSection.module.css
@@ -1,9 +1,12 @@
 .container:not(:first-of-type) {
-  border-top: 1px solid var(--color-shade-two);
+  border-top: 1px solid var(--color-shade-three);
 }
 
 .category {
+  font-size: 1.2em;
+}
+
+.items {
   display: grid;
-  grid-template-columns: 1fr auto;
-  align-items: center;
+  grid-template-columns: repeat(auto-fit, minmax(50%, 1fr));
 }
