--- a/src/app/components/User/User.module.css
+++ b/src/app/components/User/User.module.css
@@ -1,12 +1,25 @@
-.header {
+.container {
   display: grid;
-  grid-template-columns: auto 1fr;
-  column-gap: 1em;
-  border-bottom: 1px solid var(--color-shade-two);
-  padding-bottom: 0.5em;
+  grid-auto-flow: column;
+  gap: 0.5em;
   align-items: center;
+  justify-content: center;
+  padding: 0.2em 0.5em;
+  border-bottom: 1px solid var(--color-shade-three);
 }
 
 .avatar {
-  grid-row: 1 / 3;
+  height: 2em;
+  width: 2em;
+}
+
+.login {
+  color: var(--color-text);
+  background: none;
+  border: 1px solid var(--color-trivial);
+  padding: 0.5em;
+}
+
+.login:hover {
+  background: var(--color-shade-three);
 }
