--- a/src/app/components/MarkerDetails/MarkerDetails.module.css
+++ b/src/app/components/MarkerDetails/MarkerDetails.module.css
@@ -11,7 +11,7 @@
   grid-auto-flow: column;
   grid-template: auto auto auto / auto 1fr auto;
   column-gap: 1em;
-  border-bottom: 1px solid var(--color-shade-two);
+  border-bottom: 1px solid var(--color-shade-three);
   padding-bottom: 0.5em;
 }
 
