--- a/src/app/components/MapFilter/MarkersView.module.css
+++ b/src/app/components/MapFilter/MarkersView.module.css
@@ -1,3 +1,25 @@
 .list {
   overflow: auto;
 }
+
+.actions {
+  display: flex;
+  gap: 0.5em;
+  justify-content: center;
+  padding: 0.5em;
+  border-bottom: 1px solid var(--color-shade-three);
+}
+
+.action {
+  background: none;
+  text-transform: uppercase;
+  color: var(--color-text);
+}
+
+.action:hover {
+  text-decoration: underline;
+}
+
+.action:active {
+  color: var(--color-primary);
+}
