✨ Rework adding markers

--- a/src/app/components/AddResources/UploadScreenshot.module.css
+++ b/src/app/components/AddResources/UploadScreenshot.module.css
@@ -1,6 +1,6 @@
 .container {
   display: grid;
-  grid-template-rows: auto 1fr auto;
+  grid-template-rows: 1fr auto;
   text-align: center;
   align-items: center;
 }
