--- a/src/app/components/WorldMap/WorldMap.module.css
+++ b/src/app/components/WorldMap/WorldMap.module.css
@@ -17,3 +17,25 @@
   background: var(--color-primary);
   color: var(--text-color);
 }
+
+/* stylelint-disable */
+:global(.leaflet-position) {
+  color: #fff;
+  text-shadow: 1px 1px 2px #000000;
+}
+
+:global(.leaflet-polygon-text) {
+  color: #fff;
+  text-shadow: 1px 1px 2px #000000;
+  width: auto !important;
+  font-size: 1em;
+}
+
+:global(.leaflet-polygon-text-0) {
+  font-size: 0.5em;
+}
+
+:global(.leaflet-polygon-text-1) {
+  font-size: 0.8em;
+}
+/* stylelint-enable */
