--- a/src/app/components/MarkerDetails/MarkerDetails.module.css
+++ b/src/app/components/MarkerDetails/MarkerDetails.module.css
@@ -1,7 +1,7 @@
 .container {
   overflow: hidden;
   display: grid;
-  grid-template-rows: auto 1fr auto;
+  grid-template: auto 1fr auto / 1fr 30%;
   gap: 0.5em;
   height: 100%;
 }
@@ -9,26 +9,23 @@
 .header {
   display: grid;
   grid-auto-flow: column;
-  grid-template: auto auto auto / auto 1fr auto;
   column-gap: 1em;
   border-bottom: 1px solid var(--color-shade-three);
   padding-bottom: 0.5em;
-}
-
-.header h2 {
-  align-self: end;
-}
-
-.header img,
-.header a {
-  grid-row: 1 / 4;
+  grid-column: 1 / 3;
+  justify-content: center;
+  align-items: center;
 }
 
 .preview {
-  height: 4em;
-  width: auto;
+  width: 100%;
 }
+
 .main {
+  display: grid;
+  grid-template-rows: 1fr auto;
+}
+.comments {
   overflow: auto;
   display: flex;
   flex-direction: column-reverse;
@@ -41,4 +38,11 @@
 .aside {
   display: flex;
   justify-content: space-between;
+}
+
+.more {
+  display: grid;
+  align-content: baseline;
+  gap: 1em;
+  overflow: auto;
 }
