🐛 Fix disabled resource step

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,7 @@
 :root {
   --color-primary: #ffb10f;
   --color-text: #b2b2b2;
-  --color-trivial: #ababab;
+  --color-trivial: #888;
   --color-shade-one: #232220;
   --color-shade-two: #141312;
   --color-shade-three: #333;
