--- a/src/app/components/Comment/Comment.module.css
+++ b/src/app/components/Comment/Comment.module.css
@@ -20,6 +20,13 @@
   grid-column: 2 / 4;
 }
 
+.name {
+  font-size: 0.9em;
+  color: var(--color-trivial);
+}
+.createdAt {
+  color: var(--color-trivial);
+}
 .message img {
   display: block;
   max-height: 256px;
