--- a/src/app/components/AddResources/SelectType.module.css
+++ b/src/app/components/AddResources/SelectType.module.css
@@ -18,6 +18,7 @@
   text-align: left;
   align-items: center;
   padding: 0;
+  text-transform: uppercase;
 }
 
 .filter:hover {
@@ -31,4 +32,5 @@
 
 .title {
   margin: 0.5em 0;
+  text-transform: uppercase;
 }
