--- a/src/app/components/MapFilter/Checkbox.module.css
+++ b/src/app/components/MapFilter/Checkbox.module.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-auto-flow: column;
   justify-content: left;
+  align-items: center;
   grid-gap: 0.25em;
   position: relative;
   transition: background-color 0.1s ease-in;
@@ -9,7 +10,7 @@
   filter: grayscale() brightness(0.5);
   cursor: pointer;
   text-transform: uppercase;
-  font-size: 0.9em;
+  font-size: 0.8em;
 }
 
 .checked {
@@ -19,6 +20,7 @@
 .filter:hover {
   filter: none;
   color: var(--color-primary);
+  text-decoration: none;
 }
 
 .filter input {
