--- a/src/app/components/MapFilter/MarkersView.module.css
+++ b/src/app/components/MapFilter/MarkersView.module.css
@@ -14,8 +14,8 @@
   background: none;
   text-transform: uppercase;
   color: var(--color-text);
-  padding: 0.25em 0.5em;
-  font-size: 0.9em;
+  padding: 0.5em 0.5em 0.25em 0.5em;
+  font-size: 0.8em;
 }
 
 .action:hover {
