--- a/src/app/components/WorldMap/WorldMap.module.css
+++ b/src/app/components/WorldMap/WorldMap.module.css
@@ -19,6 +19,10 @@
 }
 
 /* stylelint-disable */
+:global(.leaflet-container) {
+  font-family: var(--font-family-secondary);
+}
+
 :global(.leaflet-position) {
   color: #fff;
   text-shadow: 1px 1px 2px #000000;
