🐛 Fix take screenshot

--- a/src/app/components/AddResources/UploadScreenshot.module.css
+++ b/src/app/components/AddResources/UploadScreenshot.module.css
@@ -11,9 +11,11 @@
   gap: 1em;
 }
 .screenshot {
-  width: 400px;
+  width: 530px;
   height: 300px;
   object-fit: contain;
+  display: grid;
+  place-items: center;
 }
 
 .upload {
