💄 Use different colors for marker categories

--- a/src/app/components/WorldMap/WorldMap.module.css
+++ b/src/app/components/WorldMap/WorldMap.module.css
@@ -50,4 +50,69 @@
   border: 1px solid var(--color-text);
 }
 
+:global(.leaflet-marker-locations) {
+  background: var(--color-shade-three);
+  border: 1px solid var(--color-text);
+}
+
+:global(.leaflet-marker-chests) {
+  background: #89cfea;
+  border: 1px solid var(--color-shade-three);
+}
+
+:global(.leaflet-marker-enemies) {
+  background: #ca0000;
+  border: 1px solid var(--color-shade-three);
+}
+
+:global(.leaflet-marker-farming) {
+  background: #72d880;
+  border: 1px solid #000;
+}
+
+:global(.leaflet-marker-fishing) {
+  background: #729bd8;
+  border: 1px solid var(--color-shade-three);
+}
+
+:global(.leaflet-marker-logging) {
+  background: #9bd872;
+  border: 1px solid var(--color-shade-three);
+}
+
+:global(.leaflet-marker-mining) {
+  background: #d89272;
+  border: 1px solid var(--color-shade-three);
+}
+
+:global(.leaflet-marker-skinning) {
+  background: #d87288;
+  border: 1px solid var(--color-shade-three);
+}
+
+:global(.leaflet-marker-lore) {
+  background: #140327;
+  border: 1px solid var(--color-text);
+}
+
+:global(.leaflet-marker-essences) {
+  background: #678a64;
+  border: 1px solid var(--color-shade-three);
+}
+
+:global(.leaflet-marker-pigments) {
+  background: #7972d8;
+  border: 1px solid var(--color-shade-three);
+}
+
+:global(.leaflet-marker-npc) {
+  background: #09302e;
+  border: 1px solid var(--color-text);
+}
+
+:global(.leaflet-marker-other) {
+  background: #3a342c;
+  border: 1px solid var(--color-text);
+}
+
 /* stylelint-enable */
