🐛 Fix area background

--- a/src/app/components/WorldMap/WorldMap.module.css
+++ b/src/app/components/WorldMap/WorldMap.module.css
@@ -32,6 +32,8 @@
   color: #fff;
   text-shadow: 1px 1px 2px #000000;
   width: auto !important;
+  background: none !important;
+  border: none !important;
   font-size: 1em;
 }
 
