--- a/src/app/components/Comment/Comment.module.css
+++ b/src/app/components/Comment/Comment.module.css
@@ -1,7 +1,7 @@
 .container {
   display: grid;
-  grid-template-columns: auto auto 1fr;
-  column-gap: 1em;
+  grid-template-columns: auto 1fr;
+  gap: 1em;
   text-align: left;
   align-items: baseline;
   padding: 1em;
@@ -16,10 +16,6 @@
   grid-row: 1 / 3;
 }
 
-.container > :last-child {
-  grid-column: 2 / 4;
-}
-
 .name {
   font-size: 0.9em;
   color: var(--color-trivial);
@@ -27,6 +23,11 @@
 .createdAt {
   color: var(--color-trivial);
 }
+
+.message {
+  grid-column: 1 /3;
+}
+
 .message img {
   display: block;
   max-height: 256px;
